guestbook-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guestbook-app
  template:
    metadata:
      labels:
        app: guestbook-app
    spec:
      containers:
        - name: http-echo
          image: hashicorp/http-echo:0.2.3
          args:
            - "-text=Hello from guestbook-app!"
            - "-listen=:5678"
          ports:
            - containerPort: 5678
