guestbook-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-app
spec:
  ports:
    - port: 80
      targetPort: 5678
  selector:
    app: guestbook-app
  type: ClusterIP
